# kalshi-autoresearch

./: .env.example  .gitignore  GRANT_APPLICATION.md  LICENSE  README.md  RESEARCH.md  pyproject.toml  setup.py
.desloppify/: plan.json  plan.json.bak  query.json  review_packet_blind.json  state-python.json  state-python.json.bak
.desloppify/external_review_sessions/ext_20260317_123728_54acac24/: canonical_import_20260317_123845.json  canonical_import_20260317_123927.json  claude_launch_prompt.md  review_result.json  review_result.template.json  reviewer_instructions.md  session.json
.desloppify/external_review_sessions/ext_20260317_124442_4800f3c9/: canonical_import_20260317_124553.json  claude_launch_prompt.md  review_result.json  review_result.template.json  reviewer_instructions.md  session.json
.desloppify/external_review_sessions/ext_20260317_124838_d599922a/: canonical_import_20260317_124942.json  claude_launch_prompt.md  review_result.json  review_result.template.json  session.json  (+1 more)
.desloppify/review_packets/: holistic_packet_20260317_122442.json  holistic_packet_20260317_123436.json  holistic_packet_20260317_123728.json  holistic_packet_20260317_124442.json  holistic_packet_20260317_124838.json
examples/: quickstart.py
kalshi_autoresearch/: __init__.py  autoresearch.py  backtest.py  config.py  memory.py  monitor.py  swarm.py  types.py
reference/: kalshi-autoresearch.mjs  kalshi-memory.mjs  kalshi-swarm.mjs
results/: summary.md
tests/: test_autoresearch.py  test_backtest.py  test_config.py  test_memory.py  test_monitor.py  test_swarm.py
(+74 files in other folders)
